fix where dropdown is too wide and make a horizontal scroll

--- a/src/resources/sass/partials/nav.sass
+++ b/src/resources/sass/partials/nav.sass
@@ -5,6 +5,10 @@
 //    border-right: 1px solid black
 //
 
+
+.dropdown-menu[data-bs-popper]
+    left: -25px !important
+
 #Profilbtn
     background: rgba(13,110,253,0)
     border-color: rgba(255,255,255,0)
@@ -13,12 +17,15 @@
     text-align: center
     vertical-align: center
     justify-content: center
+    padding-right: 6px
+    padding-left: 0px
+    margin-left: -10px
 
 #profileDropdown
     background: rgba(13,110,253,0)
     border-color: rgba(255,255,255,0)
     border-right-color: rgba(13,110,253,0)
-    margin-left: 2.5px
+    margin-left: -5.5px
     color: black
     opacity: 55%
     text-align: center
@@ -53,6 +60,8 @@
     margin-left: 2.5px
     color: black
     opacity: 55%
+    padding-right: 6px
+    padding-left: 6px
 
 #bellbtn:hover
     opacity: 100%
@@ -63,6 +72,8 @@
     margin-left: 2.5px
     color: black
     opacity: 55%
+    padding-right: 6px
+    padding-left: 6px
 #searchbtn:hover
     opacity: 100%
 #searchbtnico
